--- a/1-start.html
+++ b/1-start.html
@@ -1,27 +1,46 @@
-# Web Development
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Class page</title>
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="hero">
+      <div class="header">
+        <h1>Web Development</h1>
 
-Spring 2015
-The Starter League
+        <div class="subheading">Spring 2015</div>
+        <div class="subheading">The Starter League</div>
+      </div>
+    </div>
 
-Knowing how to hack also means that when you have ideas, you’ll be able to implement them… It’s a big advantage, when you’re considering an idea like putting a college facebook online, if instead of merely thinking “That’s an interesting idea,” you can think instead “That’s an interesting idea. I’ll try building an initial version tonight.”
-- Paul Graham
+    <p>Knowing how to hack also means that when you have ideas, you’ll be able to implement them… It’s a big advantage, when you’re considering an idea like putting a college facebook online, if instead of merely thinking “That’s an interesting idea,” you can think instead “That’s an interesting idea. I’ll try building an initial version tonight.”</p>
+    <div>- Paul Graham</div>
 
-## Instructors
+    <h2>Instructors</h2>
+    <ul>
+      <li>
+        <div>Arjun Venkataswamy</div>
+        <img src="http://www.starterschool.com/assets/instructors/arjun-venkataswamy/thumb-341faa01fc7fb4ab5ac4aef8c22c15bf.jpg" width="100px" alt="arjun">
+      </li>
+      <li>
+        <div>Lanny Bose</div>
+        <img src="https://lh4.googleusercontent.com/-rKbggUtiGMc/AAAAAAAAAAI/AAAAAAAAAK8/CAHMFpfPlm4/s120-c/photo.jpg" width="100px" alt="lanny">
+      </li>
+    </ul>
 
-Arjun Venkataswamy
-http://www.starterschool.com/assets/instructors/arjun-venkataswamy/thumb-341faa01fc7fb4ab5ac4aef8c22c15bf.jpg
-
-Lanny Bose
-https://lh4.googleusercontent.com/-rKbggUtiGMc/AAAAAAAAAAI/AAAAAAAAAK8/CAHMFpfPlm4/s120-c/photo.jpg
-
-## Students
-
-Alina Badalich
-Jacob Baker
-James McCarthy
-Jolyon Ticer-Wurr
-Kristina Wang
-Natalya Chytry
-Patrick McKernin
-Shannon Hall
-Shawn Fisher
+    <h2>Students</h2>
+    <ul>
+      <li>Alina Badalich</li>
+      <li>Jacob Baker</li>
+      <li>James McCarthy</li>
+      <li>Jolyon Ticer-Wurr</li>
+      <li>Kristina Wang</li>
+      <li>Natalya Chytry</li>
+      <li>Patrick McKernin</li>
+      <li>Shannon Hall</li>
+      <li>Shawn Fisher</li>
+    </ul>
+  </body>
+</html>
